# plutarch-code

./: .gitignore  cabal.project  plutarch-code.cabal
data/: check-signatory.plutus  match-guess.plutus  nftMp.plutus  vesting.plutus
src/MintingPolicies/: NFT.hs  NFTOffChain.hs
src/Utilities/: Serialise.hs
src/Validators/: CheckSignature.hs  Guess.hs  Vesting.hs
